# wxrust

./: .gitignore  AGENTS.md  Cargo.toml  README.md  cli-invocations.md  coverage.sh  smoke.py
.github/workflows/: ci.yml
examples/: 2025-01-21  2025-08-29
smoke/000-help/: command  expected.stdout
smoke/001-show-2025-01-21/: command  expected.stdout  flags
smoke/002-show-summary-2025-08-29/: command  expected.stdout
smoke/003-list-before-count5/: command  expected.stdout
smoke/004-list-before-count5-summary/: command  expected.stdout
smoke/005-list-before-count5-details/: command  expected.stdout
src/: api.rs  auth.rs  formatters.rs  lib.rs  main.rs  models.rs  utils.rs  workouts.rs
tests/: test_api.rs  test_auth.rs  test_auth_integration.rs  test_formatters.rs  test_workouts.rs
