[package]
name = "wxrust"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
base64 = "0.21"
clap = { version = "4.0", features = ["derive"] }
regex = "1.0"
